--- a/src/app/pages/images/images.component.html
+++ b/src/app/pages/images/images.component.html
@@ -1,2 +1,42 @@
-<p>images works!</p>
-<pre>{{ item | json }}</pre>
+<div>
+  <div
+    class="border-gray-200 w-full h-22 my-2 pb-3 flex justify-center border-b-4"
+  >
+    <i [routerLink]="['/home']" class="icon icon-back text-4xl pt-5 pl-5"></i>
+    <h1 class="mx-auto text-4xl font-bold text-gray-800 p-6">Pixabay</h1>
+  </div>
+  <div class="flex justify-center mx-auto w-full rounded-sm mt-8">
+    <div class="">
+      <img
+        class="image rounded-tr-xl rounded-tl-xl border-solid border-2"
+        [src]="item.largeImageURL"
+        [alt]="item.userImageURL"
+      />
+      <div
+        class="target px-6 py-4 border-solid border-2 border-t-0 rounded-bl-xl rounded-br-xl bg-gray-100"
+      >
+        <div class="mb-2">
+          <span
+            class="flex justify-between items-center text-gray-700 text-sm font-bold mb-2"
+            >Tags:</span
+          >
+          <span> {{ item.tags }}</span>
+        </div>
+        <div class="mb-2">
+          <span
+            class="flex justify-between items-center text-gray-700 text-sm font-bold mb-1"
+            >Views:</span
+          >
+          <span class="mb-10"> {{ item.views }}</span>
+        </div>
+        <div>
+          <span
+            class="flex justify-between items-center text-gray-700 text-sm font-bold mb-2"
+            >Likes:</span
+          >
+          <span> {{ item.likes }}</span>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
